# agent-of-empires

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  build.rs  codecov.yml  flake.nix
.github/workflows/: cachix-push.yml  ci.yml  docs.yml  e2e-recording.yml  nix-npm-hash-fix-pr.yml  nix-npm-hash.yml  release.yml  tests.yml
acp-worker/aoe-agent/: package-lock.json  package.json
acp-worker/test-shim/: package-lock.json  package.json  shim.mjs
aoe-plugin-api/: Cargo.toml  README.md
aoe-plugin-api/src/: capability.rs  id.rs  lib.rs  manifest.rs
aoe-plugin-api/tests/: manifest.rs
aoe-settings-derive/src/: lib.rs
contrib/plugin-template/: worker.mjs
docker/: Dockerfile
docs/: development.md  installation.md  plugins.md  quick-start.md  structured-view.md  telemetry.md
docs/adr/: 0001-scheduler-runs-in-os-registered-daemon.md  0002-scheduled-runs-auto-approve-and-sandbox.md  0003-run-lifecycle-and-firing-semantics.md  0004-scheduler-host-vs-execution-location.md
docs/cli/: reference.md
docs/cockpit/: interface.md  persistence.md
docs/development/: adding-agents.md  adding-settings.md  playwright.md  web-dashboard.md  writing-plugins.md
plugins/: featured.toml
scripts/: verify-shared-target.sh
src/: agents.rs  build_info.rs  lib.rs  logging.rs  main.rs  tips.rs
tests/: acp_runner_keepalive.rs  acp_runner_orphan.rs  automation_autospawn.rs  automation_prompt_injection.rs  no_stale_doc_refs.rs  telemetry.rs
web/: package-lock.json  package.json  playwright.live.config.ts
website/: package-lock.json  package.json
(+510 files in other folders)
